src/objects/Budget__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spending_Budget__c</fullName>
        <label>Spending Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Saving__c</fullName>
        <label>Target Saving</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <label>Total Expenses</label>
        <summarizedField>Expense__c.Amount__c</summarizedField>
        <summaryForeignKey>Expense__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Income__c</fullName>
        <label>Total Income</label>
        <summarizedField>Income__c.Amount__c</summarizedField>
        <summaryForeignKey>Income__c.Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Budget</label>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>